--- a/figures/cvmfs-blocks.tex
+++ b/figures/cvmfs-blocks.tex
@@ -64,7 +64,7 @@
    \node (bb top right) at (extremxy) {};
    \begin{pgfonlayer}{background}
       \node [fit=(bb bottom left) (bb top right),top color=red!50!black!20,bottom color=white] (bb box) {};
-      \node [blocklabel] at (0,\extremy pt) {Building Blocks};
+      \node [blocklabel] at (0,\extremy pt) {External Building Blocks};
    \end{pgfonlayer}
    
 
