--- a/references.bib
+++ b/references.bib
@@ -1,5 +1,14 @@
 
 
+@inbook{ripemd160,
+	Author = {Hand Dobbertin and Antoon Bosselaers and Bart Preneel},
+	Pages = {71-82},
+	Publisher = {Springer},
+	Series = {Lecture Notes in Computer Science},
+	Title = {{RIPEMD-160}: A strengthened version of {RIPEMD}},
+	Volume = {1039},
+	Year = {1996}}
+
 @techreport{wpad99,
 	Author = {Paul Gauthier and Josh Cohen and Martin Dunsmuir and Charles Perkins},
 	Institution = {IETF Secretariat},
