add reference to RPMss

--- a/cpt-repo.tex
+++ b/cpt-repo.tex
@@ -33,7 +33,7 @@ Figure~\ref{fig:installwebserver} outlines the process of publishing a repositor
 \item Officially supported platforms
 \begin{itemize}
     \item Scientific Linux 5 (64 bit)
-    \item Scientific Linux 6 (64 bit - with custom AUFS enabled kernel)
+    \item Scientific Linux 6 (64 bit - with custom AUFS enabled kernel - Appendix~\ref{apx:rpms})
     \item Ubuntu 13.10 and above (64 bit - with installed AUFS kernel module)
 \end{itemize}
 \end{itemize}
