reference section in quickstart

--- a/cpt-repo.tex
+++ b/cpt-repo.tex
@@ -29,7 +29,7 @@ Figure~\ref{fig:installwebserver} outlines the process of publishing a repositor
 \subsection{System Requirements}
 \begin{itemize}
 \item Apache HTTP server \emph{OR} S3 compatible storage service
-\item AUFS union file system in the kernel
+\item AUFS union file system in the kernel (see Section~\ref{sct:customkernelinstall})
 \item Officially supported platforms
 \begin{itemize}
     \item Scientific Linux 5 (64 bit)
