--- a/cpt-repo.tex
+++ b/cpt-repo.tex
@@ -70,7 +70,7 @@ Figure~\ref{fig:installwebserver} outlines the process of publishing a repositor
 
 \pagebreak
 
-\section{Installing AUFS-enabled Kernel on Scientific Linux}
+\section{Installing the AUFS-enabled Kernel on Scientific Linux 6}
 \label{sct:customkernelinstall}
 \cvmfs\ uses the union file-system AUFS \cite{aufs} to efficiently determine file-system tree updates while publishing repository transactions on the server (see Figure~\ref{fig:installwebserver}).
 Note that this is \emph{only} required on a \cvmfs\ server and \emph{not} on the client machines.
@@ -80,7 +80,7 @@ The kernel RPMs are published in the \texttt{cernvm-kernel} yum repository. \\
 
 \noindent Please follow these steps to install the provided customised kernel:
 \begin{enumerate}
-\item Download the latest cvmfs-release package from the CernVM website \footnote{CernVM-FS download page: http://cernvm.cern.ch/portal/filesystem/downloads}
+\item Download the latest cvmfs-release package from the CernVM website\footnote{CernVM-FS download page: http://cernvm.cern.ch/portal/filesystem/downloads}
 \item Install the cvmfs-release package: \texttt{yum install cvmfs-release*.rpm} \\
 This adds the CernVM yum repositories to your machine's configuration.
 \item Install the AUFS enabled kernel from \texttt{cernvm-kernel}: \\
