add scaffold for exhaustive server description

--- a/cpt-repo.tex
+++ b/cpt-repo.tex
@@ -129,6 +129,7 @@ Please note, that Scientific Linux 6 \emph{does not} ship with an \aufs\ enabled
 \label{sct:repoanatomy}
 There are a number of possible customisations in the \cvmfs\ server installation.
 The following table provides an overview of important configuration files and intrinsical paths together with some customisation hints.
+For an exhaustive description of the \cvmfs\ server infrastructure please consult Appendix~\ref{apx:serverinfrastructure}.
 \LTXtable{\textwidth}{figures/tabserveranatomy.tex}
 
 
