--- a/cvmfstech.tex
+++ b/cvmfstech.tex
@@ -132,6 +132,7 @@
 %\include{apx-releasemgr}
 \include{apx-rpms}
 \include{apx-parameters}
+\include{apx-serverinfra}
 
 \pagestyle{plain}
 \bibliographystyle{alpha}
