FIX: typo in server anatomy table

--- a/figures/tabserveranatomy.tex
+++ b/figures/tabserveranatomy.tex
@@ -13,7 +13,7 @@
 	Can be mounted or symlinked to another location \emph{before} creating the first repository. \\
 	\addlinespace
 
-	\texttt{/srv/cvmfs/<fqrn>} & \textbf{Storage location of a specfic repository} \newline
+	\texttt{/srv/cvmfs/<fqrn>} & \textbf{Storage location of a specific repository} \newline
 	Can be symlinked to another location \emph{before} creating the repository \texttt{<fqrn>}. \\
 	\addlinespace
 
