add labels to parameter tables

--- a/figures/tabparameters.tex
+++ b/figures/tabparameters.tex
@@ -49,6 +49,8 @@
 		\tt CVMFS\_USER					& Sets the \texttt{gid} and \texttt{uid} mount options. Don't touch or overwrite.\\
 		\tt CVMFS\_USYSLOG				& All messages that normally are logged to syslog are re-directed to the given file.  This file can grow up to \SI{500}{\kilo\byte} and there is one step of log rotation.  Required for $\mu$CernVM.\\
 		\bottomrule
+
+		\label{tab:clientparameters}
 	\end{longtable}
 %\end{longtable}
 %\end{center}
