--- a/figures/tabserverparameters.tex
+++ b/figures/tabserverparameters.tex
@@ -31,6 +31,8 @@
 		\tt CVMFS\_AUTO\_GC					& Enables the automatic garbage collection on \texttt{publish} and \texttt{snapshot}\\
 		\tt CVMFS\_AUTO\_GC\_TIMESPAN		& Date-threshold for automatic garbage collection \newline (For example: \texttt{3 days ago}, \texttt{1 week ago}, ...)\\
 		\bottomrule
+
+		\label{tab:serverparameters}
 	\end{longtable}
 %\end{longtable}
 %\end{center}
