--- a/figures/tabrepoconfiganatomy.tex
+++ b/figures/tabrepoconfiganatomy.tex
@@ -24,6 +24,6 @@
 	\addlinespace
 
 	\bottomrule
-	\caption{Constituents of the repository spool area.}
+	\caption{\cvmfs\ server repository configuration file locations.}
 	\label{tbl:repoconfiganatomy}
 \end{longtable}
