--- a/apx-serverinfra.tex
+++ b/apx-serverinfra.tex
@@ -9,6 +9,7 @@ A \cvmfs\ server installation depends on some environment setup and tools to be 
 \begin{itemize}
 \item \aufs\ support in the kernel (see Section~\ref{sct:customkernelinstall})
 \item Backend storage location available through HTTP
+\item Backend storage accessible at \texttt{/srv/cvmfs/...} (unless stored on S3)
 \item \textbf{cvmfs} and \textbf{cvmfs-server} packages installed
 \end{itemize}
 \pagebreak
