FIX: bucket name of single S3 bucket

--- a/cpt-repo.tex
+++ b/cpt-repo.tex
@@ -170,7 +170,7 @@ Such volatile repositories can be useful, for instance, for experiment condition
 The S3 storage settings are given as parameters to \texttt{cvmfs\_server mkfs}:
 \begin{verbatim}
   cvmfs_server mkfs -s /etc/cvmfs/.../mys3.conf \
-    -w http://s3.amazonaws.com/mybucket my.repo.name
+    -w http://s3.amazonaws.com/mybucket-1-1 my.repo.name
 \end{verbatim}
 
 The file ``mys3.conf'' contains the S3 settings (see Table~\ref{tbl:s3confparameters}).
